--- a/aber/software-engineering/lit-review/report.tex
+++ b/aber/software-engineering/lit-review/report.tex
@@ -434,12 +434,12 @@
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
 \begin{abstract}
-The abstract goes here.
+The prediction of secondary and tertiary RNA structure from single or multiple sequences is a challenging open problem. The conformational space is both extremely large and complex. This article provides a review of automated computational approaches to RNA structure prediction, beginning with and introduction for non-biologists and working through the core techniques presented for both secondary and tertiary structure. Finally, a summary of the general trends in the field and directions for future work a suggested. 
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-RNA, literature review, dynamic programming, context free grammars, bioinformatics, computational biology.
+Bioinformatics, Computer Simulation, Dynamic Programming, Molecular Biophysics
 \end{IEEEkeywords}
 
 
@@ -468,7 +468,7 @@ The primary structure of bases in a strand of RNA is fairly easy to obtain exper
 
 RNA structure prediction is the field of bioinformatics which aims to accurately predict the secondary and tertiary structure of RNA from the known primary structure. This is a difficult procedure due to the non-trivial structures that can be formed by as an RNA molecule folds and binds with itself. Another limitation is the high number of potentially feasible but sub-optimum structures that inhabit the conformational space close to the true structure. Structure prediction also suffers from a ``catch-22'' scenario where the quality of predictions could potentially be made better if only more known structures could be determined. Most approaches, both for secondary and tertiary structure focus are based on predicting the structure which exhibits the minimum of free energy of the chemical structure, but this is still an imperfect simplification.
 
-This paper provides a review many of the methods used to predict both the secondary and tertiary structure of RNA molecules. Section \ref{sec:rna-structure} provides an overview of the chemical structure of RNA from the basic building blocks up to the full 3D structure. Section \ref{sec:rna-secondary-structure} discusses various methods applied to predicting the secondary structure of RNA. Section \ref{sec:rna-tertiary-structure} provides the complementary discussion on the prediction of the tertiary structure of RNA. A summary and discussion of the challenges faced and overcome in both types of structure prediction is provided in section \ref{sec:discussion}. Finally, some concluding remarks as well as some comments of future directions are given in section \ref{sec:conclusion}.
+This paper provides a review many of the methods used to predict both the secondary and tertiary structure of RNA molecules. Section \ref{sec:rna-structure} provides an overview of the chemical structure of RNA from the basic building blocks up to the full 3D structure. Section \ref{sec:rna-secondary-structure} discusses various methods applied to predicting the secondary structure of RNA. Section \ref{sec:rna-tertiary-structure} provides the complementary discussion on the prediction of the tertiary structure of RNA. Finally, A summary and discussion of the challenges faced and overcome in both types of structure prediction is provided in section \ref{sec:discussion}.
 
 
 \section{RNA Structure}
