Finish proof reading

--- a/aber/software-engineering/lit-review/references.bib
+++ b/aber/software-engineering/lit-review/references.bib
@@ -1,5 +1,5 @@
 @inproceedings{nowakowski1997rna,
-  title={RNA structure and stability},
+  title={{RNA} structure and stability},
   author={Nowakowski, Jacek and Tinoco, Ignacio},
   booktitle={Seminars in virology},
   volume={8},
@@ -9,18 +9,18 @@
   organization={Elsevier}
 }
 @article{nussinov1980fast,
-  title={Fast algorithm for predicting the secondary structure of single-stranded RNA},
+  title={Fast algorithm for predicting the secondary structure of single-stranded {RNA}},
   author={Nussinov, Ruth and Jacobson, Ann B},
   journal={Proceedings of the National Academy of Sciences},
   volume={77},
   number={11},
   pages={6309--6313},
   year={1980},
-  publisher={National Acad Sciences}
+  publisher={National Academy of Sciences}
 }
 
 @article{mccaskill1990equilibrium,
-  title={The equilibrium partition function and base pair binding probabilities for RNA secondary structure},
+  title={The equilibrium partition function and base pair binding probabilities for {RNA} secondary structure},
   author={McCaskill, John S},
   journal={Biopolymers},
   volume={29},
@@ -31,29 +31,29 @@
 }
 
 @article{zuker1981optimal,
-  title={Optimal computer folding of large RNA sequences using thermodynamics and auxiliary information},
+  title={Optimal computer folding of large {RNA} sequences using thermodynamics and auxiliary information},
   author={Zuker, Michael and Stiegler, Patrick},
   journal={Nucleic acids research},
   volume={9},
   number={1},
   pages={133--148},
   year={1981},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{do2006contrafold,
-  title={CONTRAfold: RNA secondary structure prediction without physics-based models},
+  title={{CONTRAfold}: {RNA} secondary structure prediction without physics-based models},
   author={Do, Chuong B and Woods, Daniel A and Batzoglou, Serafim},
   journal={Bioinformatics},
   volume={22},
   number={14},
   pages={e90--e98},
   year={2006},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{laing2010computational,
-  title={Computational approaches to 3D modeling of RNA},
+  title={Computational approaches to 3D modeling of {RNA}},
   author={Laing, Christian and Schlick, Tamar},
   journal={Journal of Physics: Condensed Matter},
   volume={22},
@@ -64,7 +64,7 @@
 }
 
 @article{rivas2013four,
-  title={The four ingredients of single-sequence RNA secondary structure prediction. A unifying perspective},
+  title={The four ingredients of single-sequence {RNA} secondary structure prediction. A unifying perspective},
   author={Rivas, Elena},
   journal={RNA biology},
   volume={10},
@@ -75,7 +75,7 @@
 }
 
 @article{mathews1999expanded,
-  title={Expanded sequence dependence of thermodynamic parameters improves prediction of RNA secondary structure},
+  title={Expanded sequence dependence of thermodynamic parameters improves prediction of {RNA} secondary structure},
   author={Mathews, David H and Sabina, Jeffrey and Zuker, Michael and Turner, Douglas H},
   journal={Journal of molecular biology},
   volume={288},
@@ -86,7 +86,7 @@
 }
 
 @techreport{kasami1965efficient,
-  title={AN EFFICIENT RECOGNITION AND SYNTAXANALYSIS ALGORITHM FOR CONTEXT-FREE LANGUAGES.},
+  title={AN EFFICIENT RECOGNITION AND SYNTAX ANALYSIS ALGORITHM FOR CONTEXT-FREE LANGUAGES.},
   author={Kasami, Tadao},
   year={1965},
   institution={DTIC Document}
@@ -113,32 +113,32 @@
 @article{giegerich2014introduction,
   title={Introduction to stochastic context free grammars},
   author={Giegerich, Robert},
-  journal={RNA Sequence, Structure, and Function: Computational and Bioinformatic Methods},
+  journal={{RNA} Sequence, Structure, and Function: Computational and Bioinformatic Methods},
   pages={85--106},
   year={2014},
   publisher={Springer}
 }
 
 @article{knudsen1999rna,
-  title={RNA secondary structure prediction using stochastic context-free grammars and evolutionary history.},
+  title={{RNA} secondary structure prediction using stochastic context-free grammars and evolutionary history.},
   author={Knudsen, Bjarne and Hein, Jotun},
   journal={Bioinformatics},
   volume={15},
   number={6},
   pages={446--454},
   year={1999},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{knudsen2003pfold,
-  title={Pfold: RNA secondary structure prediction using stochastic context-free grammars},
+  title={Pfold: {RNA} secondary structure prediction using stochastic context-free grammars},
   author={Knudsen, Bjarne and Hein, Jotun},
   journal={Nucleic acids research},
   volume={31},
   number={13},
   pages={3423--3428},
   year={2003},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{lari1990estimation,
@@ -153,36 +153,36 @@
 }
 
 @article{deigan2009accurate,
-  title={Accurate SHAPE-directed RNA structure determination},
+  title={Accurate {SHAPE}-directed {RNA} structure determination},
   author={Deigan, Katherine E and Li, Tian W and Mathews, David H and Weeks, Kevin M},
   journal={Proceedings of the National Academy of Sciences},
   volume={106},
   number={1},
   pages={97--102},
   year={2009},
-  publisher={National Acad Sciences}
+  publisher={National Academy of Sciences}
 }
 
 @article{ding2003statistical,
-  title={A statistical sampling algorithm for RNA secondary structure prediction},
+  title={A statistical sampling algorithm for {RNA} secondary structure prediction},
   author={Ding, Ye and Lawrence, Charles E},
   journal={Nucleic acids research},
   volume={31},
   number={24},
   pages={7280--7301},
   year={2003},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{ding2005rna,
-  title={RNA secondary structure prediction by centroids in a Boltzmann weighted ensemble},
+  title={{RNA} secondary structure prediction by centroids in a Boltzmann weighted ensemble},
   author={Ding, YE and Chan, Chi Yu and Lawrence, Charles E},
-  journal={Rna},
+  journal={RNA},
   volume={11},
   number={8},
   pages={1157--1166},
   year={2005},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @book{rousseeuw1990finding,
@@ -193,14 +193,14 @@
 }
 
 @article{do2006contrafold,
-  title={CONTRAfold: RNA secondary structure prediction without physics-based models},
+  title={{CONTRAfold}: {RNA} secondary structure prediction without physics-based models},
   author={Do, Chuong B and Woods, Daniel A and Batzoglou, Serafim},
   journal={Bioinformatics},
   volume={22},
   number={14},
   pages={e90--e98},
   year={2006},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{rivas1999dynamic,
@@ -215,14 +215,14 @@
 }
 
 @article{reeder2007pknotsrg,
-  title={pknotsRG: RNA pseudoknot folding including near-optimal structures and sliding windows},
+  title={{pknotsRG}: {RNA} pseudoknot folding including near-optimal structures and sliding windows},
   author={Reeder, Jens and Steffen, Peter and Giegerich, Robert},
   journal={Nucleic acids research},
   volume={35},
   number={suppl 2},
   pages={W320--W324},
   year={2007},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{bindewald2010cylofold,
@@ -233,7 +233,7 @@
   number={suppl 2},
   pages={W368--W372},
   year={2010},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{lorenz2011viennarna,
@@ -250,49 +250,49 @@
 @article{bindewald2006rna,
   title={RNA secondary structure prediction from sequence alignments using a network of k-nearest neighbor classifiers},
   author={Bindewald, Eckart and Shapiro, Bruce A},
-  journal={Rna},
+  journal={RNA},
   volume={12},
   number={3},
   pages={342--352},
   year={2006},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @article{sato2009centroidfold,
-  title={CENTROIDFOLD: a web server for RNA secondary structure prediction},
+  title={{CENTROIDFOLD}: a web server for RNA secondary structure prediction},
   author={Sato, Kengo and Hamada, Michiaki and Asai, Kiyoshi and Mituyama, Toutai},
   journal={Nucleic acids research},
   volume={37},
   number={suppl 2},
   pages={W277--W280},
   year={2009},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{hamada2009prediction,
-  title={Prediction of RNA secondary structure using generalized centroid estimators},
+  title={Prediction of {RNA} secondary structure using generalized centroid estimators},
   author={Hamada, Michiaki and Kiryu, Hisanori and Sato, Kengo and Mituyama, Toutai and Asai, Kiyoshi},
   journal={Bioinformatics},
   volume={25},
   number={4},
   pages={465--473},
   year={2009},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{shapiro1997predicting,
-  title={Predicting RNA H-type pseudoknots with the massively parallel genetic algorithm},
+  title={Predicting {RNA} H-type pseudoknots with the massively parallel genetic algorithm},
   author={Shapiro, Bruce A and Wu, Jin Chu},
   journal={Computer applications in the biosciences: CABIOS},
   volume={13},
   number={4},
   pages={459--471},
   year={1997},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @article{shapiro1994massively,
-  title={A massively parallel genetic algorithm for RNA secondary structure prediction},
+  title={A massively parallel genetic algorithm for {RNA} secondary structure prediction},
   author={Shapiro, Bruce A and Navetta, Joseph},
   journal={The Journal of Supercomputing},
   volume={8},
@@ -303,7 +303,7 @@
 }
 
 @article{hofacker1994fast,
-  title={Fast folding and comparison of RNA secondary structures},
+  title={Fast folding and comparison of {RNA} secondary structures},
   author={Hofacker, Ivo L and Fontana, Walter and Stadler, Peter F and Bonhoeffer, L Sebastian and Tacker, Manfred and Schuster, Peter},
   journal={Monatshefte f{\"u}r Chemie/Chemical Monthly},
   volume={125},
@@ -314,22 +314,22 @@
 }
 
 @article{cruz2012rna,
-  title={RNA-Puzzles: a CASP-like evaluation of RNA three-dimensional structure prediction},
+  title={{RNA}-Puzzles: a CASP-like evaluation of {RNA} three-dimensional structure prediction},
   author={Cruz, Jos{\'e} Almeida and Blanchet, Marc-Fr{\'e}d{\'e}rick and Boniecki, Michal and Bujnicki, Janusz M and Chen, Shi-Jie and Cao, Song and Das, Rhiju and Ding, Feng and Dokholyan, Nikolay V and Flores, Samuel Coulbourn and others},
-  journal={Rna},
+  journal={RNA},
   volume={18},
   number={4},
   pages={610--625},
   year={2012},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @article{miao2015rna,
-  title={RNA-Puzzles Round II: assessment of RNA structure prediction programs applied to three large RNA structures},
+  title={{RNA}-Puzzles Round II: assessment of RNA structure prediction programs applied to three large RNA structures},
   author={Miao, Zhichao and Adamiak, Ryszard W and Blanchet, Marc-Fr{\'e}d{\'e}rick and Boniecki, Michal and Bujnicki, Janusz M and Chen, Shi-Jie and Cheng, Clarence and Chojnowski, Grzegorz and Chou, Fang-Chieh and Cordero, Pablo and others},
-  journal={Rna},
+  journal={RNA},
   year={2015},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @article{laing2010computational,
@@ -344,14 +344,14 @@
 }
 
 @article{das2007automated,
-  title={Automated de novo prediction of native-like RNA tertiary structures},
+  title={Automated de novo prediction of native-like {RNA} tertiary structures},
   author={Das, Rhiju and Baker, David},
   journal={Proceedings of the National Academy of Sciences},
   volume={104},
   number={37},
   pages={14664--14669},
   year={2007},
-  publisher={National Acad Sciences}
+  publisher={National Academy of Sciences}
 }
 
 @article{ban2000complete,
@@ -366,7 +366,7 @@
 }
 
 @article{parisien2008mc,
-  title={The MC-Fold and MC-Sym pipeline infers RNA structure from sequence data},
+  title={The {MC-Fold and MC-Sym} pipeline infers RNA structure from sequence data},
   author={Parisien, Marc and Major, Francois},
   journal={Nature},
   volume={452},
@@ -379,16 +379,16 @@
 @article{ding2008ab,
   title={Ab initio RNA folding by discrete molecular dynamics: from structure prediction to folding mechanisms},
   author={Ding, Feng and Sharma, Shantanu and Chalasani, Poornima and Demidov, Vadim V and Broude, Natalia E and Dokholyan, Nikolay V},
-  journal={Rna},
+  journal={RNA},
   volume={14},
   number={6},
   pages={1164--1173},
   year={2008},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @article{das2010atomic,
-  title={Atomic accuracy in predicting and designing noncanonical RNA structure},
+  title={Atomic accuracy in predicting and designing noncanonical {RNA} structure},
   author={Das, Rhiju and Karanicolas, John and Baker, David},
   journal={Nature methods},
   volume={7},
@@ -410,38 +410,38 @@
 }
 
 @article{cao2005predicting,
-  title={Predicting RNA folding thermodynamics with a reduced chain representation model},
+  title={Predicting {RNA} folding thermodynamics with a reduced chain representation model},
   author={Cao, Song and Chen, Shi-Jie},
-  journal={Rna},
+  journal={RNA},
   volume={11},
   number={12},
   pages={1884--1897},
   year={2005},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @techreport{case2010amber,
-  title={Amber 11},
+  title={{AMBER} 11},
   author={Case, David A and Darden, TA and Cheatham, TE and Simmerling, Carlos L and Wang, J and Duke, Robert E and Luo, Ray and Walker, RC and Zhang, W and Merz, KM and others},
   year={2010},
   institution={University of California}
 }
 
 @article{jonikas2009coarse,
-  title={Coarse-grained modeling of large RNA molecules with knowledge-based potentials and structural filters},
+  title={Coarse-grained modeling of large {RNA} molecules with knowledge-based potentials and structural filters},
   author={Jonikas, Magdalena A and Radmer, Randall J and Laederach, Alain and Das, Rhiju and Pearlman, Samuel and Herschlag, Daniel and Altman, Russ B},
-  journal={Rna},
+  journal={RNA},
   volume={15},
   number={2},
   pages={189--199},
   year={2009},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @incollection{rother2012template,
-  title={Template-based and template-free modeling of RNA 3D structure: Inspirations from protein structure modeling},
+  title={Template-based and template-free modeling of {RNA} 3D structure: Inspirations from protein structure modeling},
   author={Rother, Kristian and Rother, Magdalena and Boniecki, Micha{\l} and Puton, Tomasz and Tomala, Konrad and {\L}ukasz, Pawe{\l} and Bujnicki, Janusz M},
-  booktitle={RNA 3D structure analysis and prediction},
+  booktitle={{RNA} 3D structure analysis and prediction},
   pages={67--90},
   year={2012},
   publisher={Springer}
@@ -454,7 +454,7 @@
 }
 
 @article{ya2014rna,
-  title={RNA structure prediction: Progress and perspective},
+  title={{RNA} structure prediction: Progress and perspective},
   author={Ya-Zhou, Shi and Yuan-Yan, Wu and Feng-Hua, Wang and Zhi-Jie, Tan},
   journal={Chinese Physics B},
   volume={23},
@@ -473,14 +473,14 @@
 }
 
 @article{darty2009varna,
-  title={VARNA: Interactive drawing and editing of the RNA secondary structure},
+  title={{VARNA}: Interactive drawing and editing of the RNA secondary structure},
   author={Darty, K{\'e}vin and Denise, Alain and Ponty, Yann},
   journal={Bioinformatics},
   volume={25},
   number={15},
   pages={1974--1975},
   year={2009},
-  publisher={Oxford Univ Press}
+  publisher={Oxford University Press}
 }
 
 @book{neidle2010principles,
@@ -505,3 +505,56 @@
 	Year = {2001},
 	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0022283601949873},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1006/jmbi.2001.4987}}
+	
+@article{yusupov2001crystal,
+  title={Crystal structure of the ribosome at 5.5 {\AA} resolution},
+  author={Yusupov, Marat M and Yusupova, Gulnara Zh and Baucom, Albion and Lieberman, Kate and Earnest, Thomas N and Cate, JHD and Noller, Harry F},
+  journal={science},
+  volume={292},
+  number={5518},
+  pages={883--896},
+  year={2001},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{sussman1978crystal,
+  title={Crystal structure of yeast phenylalanine transfer {RNA}: I. Crystallographic refinement},
+  author={Sussman, Joel L and Holbrook, Stephen R and Warrant, R Wade and Church, George M and Kim, Sung-Hou},
+  journal={Journal of molecular biology},
+  volume={123},
+  number={4},
+  pages={607--630},
+  year={1978},
+  publisher={Elsevier}
+}
+
+@article{holbrook1978crystal,
+  title={Crystal structure of yeast phenylalanine transfer {RNA}: II. Structural features and functional implications},
+  author={Holbrook, Stephen R and Sussman, Joel L and Warrant, R Wade and Kim, Sung-Hou},
+  journal={Journal of molecular biology},
+  volume={123},
+  number={4},
+  pages={631--660},
+  year={1978},
+  publisher={Elsevier}
+}
+
+@article{chen2005functional,
+  title={Functional Analysis of the Pseudoknot Structure in Human Telomerase {RNA}},
+  author={Chen, Jiunn-Liang and Greider, Carol W},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  pages={8080--8085},
+  year={2005},
+  publisher={JSTOR}
+}
+
+@article{pleij1985new,
+  title={A new principle of {RNA} folding based on pseudoknotting},
+  author={Pleij, Comelis WA and Rietveld, Krijn and Bosch, Leendert},
+  journal={Nucleic Acids Research},
+  volume={13},
+  number={5},
+  pages={1717--1731},
+  year={1985},
+  publisher={Oxford University Press}
+}
